--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -8,6 +8,7 @@ jobs:
   build_docker_image:
     name: Build Docker Image
     runs-on: ubuntu-latest
+    timeout-minutes: 45
     permissions:
       packages: write
       contents: read
@@ -17,6 +18,11 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: arm64
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
